<resources>
    <string-array name="main_fields">
        <item> Agriculture &amp; Enterprise Development  </item>
        <item> Applied Human Sciences </item>
        <item> Business </item>
        <item> Economics </item>
        <item> Education </item>
        <item> Engineering &amp; Technology </item>
        <item> Environmental Studies </item>
        <item> Hospitality &amp; Tourism </item>
        <item> Humanities &amp; Social Sciences </item>
        <item> Law </item>
        <item> Medicine </item>
        <item> Public Health </item>
        <item> Pure &amp; Applied Sciences </item>
        <item> Visual &amp; Performing Art </item>
        <item> Confucius Institute </item>
        <item> Peace &amp; Security Studies </item>
        <item> Creative Arts, Film &amp; Media Studies </item>
        <item> Architecture </item>
        <item> Not applicable </item>

    </string-array>
    <string-array name="sign_main_fields">
        <item> -select a field-  </item>
        <item> Agriculture &amp; Enterprise Development  </item>
        <item> Applied Human Sciences </item>
        <item> Business </item>
        <item> Economics </item>
        <item> Education </item>
        <item> Engineering &amp; Technology </item>
        <item> Environmental Studies </item>
        <item> Hospitality &amp; Tourism </item>
        <item> Humanities &amp; Social Sciences </item>
        <item> Law </item>
        <item> Medicine </item>
        <item> Public Health </item>
        <item> Pure &amp; Applied Sciences </item>
        <item> Visual &amp; Performing Art </item>
        <item> Confucius Institute </item>
        <item> Peace &amp; Security Studies </item>
        <item> Creative Arts, Film &amp; Media Studies </item>
        <item> Architecture </item>
        <item> Not applicable </item>

    </string-array>
    <string-array name="yearFilter">

        <item> All </item>
        <item> Yr 1 </item>
        <item> Yr 2 </item>
        <item> Yr 3 </item>
        <item> Yr 4 </item>
        <item> Yr 5 </item>
        <item> Certificate </item>
        <item> Diploma </item>
        <item> Masters </item>
        <item> phD </item>

    </string-array>
    <string-array name="user_titles">

        <item> Mr. </item>
        <item> Mrs. </item>
        <item> Miss. </item>
        <item> Madam. </item>
        <item> Tr. </item>
        <item> Dr. </item>
        <item> Prof. </item>
        <item> Eng. </item>
        <item> H.E. </item>
        <item> Sister. </item>
        <item> Bishop. </item>
        <item> Officer. </item>
        <item> Speaker. </item>
        <item> Type title </item>


    </string-array>
    <string-array name="institutions">
        <item> -select a field-  </item>
        <item> University of Nairobi </item>
        <item> Kenyatta University </item>
        <item> Strathmore University </item>
        <item> Jomo Kenyatta University of Agriculture and Technology </item>
        <item> United States International University Africa </item>
        <item> Moi University </item>
        <item> Egerton University </item>
        <item> Mount Kenya University </item>
        <item> The Catholic University of Eastern Africa </item>
        <item> Africa Nazarene University </item>
        <item> Technical University of Kenya </item>
        <item> Maseno University </item>
        <item> Zetech University </item>
        <item> KMTC </item>
        <item> Type my institution </item>


    </string-array>
    <string-array name="semesters">
        <item> Semester 1 </item>
        <item> Semester 2 </item>
        <item> Semester 3 </item>
        <item> Not applicable </item>

    </string-array>
    <string-array name="semesters1">
        <item> -select a field-  </item>
        <item> Semester 1 </item>
        <item> Semester 2 </item>
        <item> Semester 3 </item>
        <item> Not applicable </item>

    </string-array>
    <string-array name="institutions1">

        <item> All </item>
        <item> University of Nairobi </item>
        <item> Kenyatta University </item>
        <item> Strathmore University </item>
        <item> Jomo Kenyatta University of Agriculture and Technology </item>
        <item> United States International University Africa </item>
        <item> Moi University </item>
        <item> Egerton University </item>
        <item> Mount Kenya University </item>
        <item> The Catholic University of Eastern Africa </item>
        <item> Africa Nazarene University </item>
        <item> Technical University of Kenya </item>
        <item> Maseno University </item>
        <item> Zetech University </item>
        <item> KMTC </item>
        <item> Type my institution </item>


    </string-array>
    <string-array name="schools">

        <item>  </item>

    </string-array>
    <string name="app_name">yNote</string>
    <string name="adMobId"> ca-app-pub-1383978019158618~8643932653 </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="library">LIBRARY</string>
    <string name="time">TIME</string>
    <string name="_8942">⋮</string>
    <string name="motion_pictures">MOTION PICTURES</string>
    <string name="settings">Settings</string>
    <string name="untitled">Untitled</string>
    <string name="y_note_studios">ynotestudios.com</string>
    <string name="engineering_technology"><![CDATA[Engineering & Technology]]></string>
    <string name="pure_applied_sciences"><![CDATA[Pure & Applied Sciences]]></string>
    <string name="humanities_social_sciences"><![CDATA[Humanities & Social Sciences]]></string>
    <string name="agriculture_enterprise_dev"><![CDATA[Agriculture & Enterprise Dev]]></string>
    <string name="hospitality_tourism"><![CDATA[Hospitality & Tourism]]></string>
    <string name="visual_performing_art"><![CDATA[Visual & Performing Art]]></string>
    <string name="peace_security_studies"><![CDATA[Peace & Security Studies]]></string>
    <string name="creative_arts_film_media_studies"><![CDATA[Creative Arts, Film & Media Studies]]></string>
    <string name="facebook_app_id">504825441162385</string>
    <string name="fb_login_protocol_scheme">fb214268554165523</string>
    <string name="email_password"><![CDATA[Email & Password]]></string>
    <string name="title_activity_motion_pictures">ScrollingActivity</string>
    <string name="publish_doc">Publish document</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="sketch_pad">Sketch pad</string>
    <string name="note_book">Note book</string>
    <string name="back_camera">Back camera</string>
    <string name="front_camera">Front camera</string>
    <string name="studio_settings">Studio settings</string>
    <string name="show_all_schools">Show from all schools</string>
    <string name="show_only_enrolled_schools">Show from only enrolled schools</string>
    <string name="lectures_amp_library_settings"><![CDATA[Lectures & library settings]]></string>
    <string name="store_narrations_privately">Store narrations privately</string>
    <string name="store_narrations_publicly">Store narrations publicly</string>
    <string name="save_settings">Save settings</string>
    <string name="navigate">Navigate</string>
    <string name="education">Education</string>
    <string name="popular">Popular</string>
    <string name="done">Done</string>
    <string name="No">No</string>
    <string name="yes">Yes</string>
    <string name="unit_title">Unit title e.g Critical and creative thinking</string>
</resources>