<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.midland.ynote.Fragments.SecondDetails">

    <LinearLayout
        android:id="@+id/docLy"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="#CC373737"
        android:layout_width="match_parent"
        android:layout_height="500dp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="#000"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:padding="8dp"
            app:cardCornerRadius="9dp">


            <EditText
                android:id="@+id/unitCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:layout_marginStart="4dp"
                android:hint="Unit code e.g UCU 103"
                android:inputType="textMultiLine"
                android:textColor="#ffff"
                android:textColorHint="#fff"
                android:textSize="15sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="#000"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp">


            <EditText
                android:id="@+id/docDetails"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#000"
                android:layout_marginStart="4dp"
                android:ems="10"
                android:hint="@string/unit_title"
                android:inputType="textMultiLine"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="15sp"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/relevance"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:visibility="gone"
            android:text="Five tags (Optional)" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_gravity="center_horizontal"
                android:text="Is this document a past examination paper?"/>

            <LinearLayout
                android:layout_gravity="center"
                android:background="@color/tw__composer_light_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxNo"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/No"/>

                <CheckBox
                    android:id="@+id/checkboxYes"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#000"
            android:layout_marginTop="50dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_back"/>

        <LinearLayout
            android:id="@+id/hideLayout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:background="#FFEB3B"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/publish"
                android:text="@string/done"
                android:background="#E91E63"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>