<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp">


        <Button
            android:id="@+id/profileButton"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <ImageView
            android:src="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/tapBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"/>

        <View
            android:background="@drawable/ui_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="65dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/nav_header_desc"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <Button
                    android:id="@+id/btnFollow"
                    android:background="#FABC6A"
                    android:layout_width="240dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:visibility="gone"
                    android:text="Add to Library"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>


            <TextView
                android:id="@+id/aliasName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/nav_header_subtitle" />


            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="35dp">

                <TextView
                    android:id="@+id/idHolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/coachesCount"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="200 coaches"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/studCount"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="250 students"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>